[package]
name = "repo"
version = "0.1.0"
authors = ["Sam Lakerveld <darkwater124@gmail.com>"]
edition = "2018"

[dependencies]
diesel         = { version = "1.3.3", features = [ "sqlite" ] }
itertools      = "0.8.0"
rocket         = "0.4.0"
rocket_contrib = { version = "0.4.0", features = [ "json", "diesel_sqlite_pool" ] }
serde          = "1.0.84"
serde_derive   = "1.0.84"
serde_json     = { version = "1.0.34", features = [ "raw_value" ] }
