[package]
name = "repo"
version = "0.1.0"
authors = ["Sam Lakerveld <darkwater124@gmail.com>"]
edition = "2018"

[dependencies]
itertools      = "0.8.0"
rocket         = "0.4.0"
rocket_contrib = { version = "0.4.0", features = [ "json" ] }
serde          = "1.0.90"
serde_derive   = "1.0.90"
serde_json     = { version = "1.0.39", features = [ "raw_value" ] }
